chore: improve error handling and refactor event listener registration